<resources>
    <string name="app_name">Inventory</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="already_member">already_member</string>
    <string name="login">login</string>
    <string name="have_account">Have account?</string>
    <string name="forgot_password">Forgot_password?</string>
    <string name="reset">Reset</string>
    <string name="logout">logout</string>
    <string name="create_new_inventory">Create New Inventory</string>
    <string name="manage_inventory">Manage Inventory</string>
    <string name="have_an_account">Have an account?</string>
</resources>